--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
           rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -17,7 +16,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Truffle Box</title>
+    <title>Coin Mixer</title>
 </head>
 <body className="mdc-typography">
 <div id="root"></div>
